fix: layout break

--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700;900&display=swap");
 
 #root {
-  width: 100vw;
+  max-width: 100vw;
   min-height: 100vh;
   background-color: #131722;
   color: #fff;
